components/apiconnect-graphql/base/introspection-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    #cert-manager.io/issuer-kind: ClusterIssuer
    #cert-manager.io/issuer-name: letsencrypt
    haproxy.router.openshift.io/balance: random
    haproxy.router.openshift.io/disable_cookies: "true"
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
    haproxy.router.openshift.io/timeout: 30s
    haproxy.router.openshift.io/timeout-tunnel: 5d
  name: introspection-route
spec:
  subdomain: stepzen-introspection
  port:
    targetPort: introspection-port
  tls:
    insecureEdgeTerminationPolicy: None
    termination: edge
  to:
    kind: Service
    name: stepzen-introspection
    weight: 150
  wildcardPolicy: None
